tests/derive-debug/duplicate-derive-debug-2.stderr
error: encountered duplicate `#[derive(Debug)]` parameter
 --> $DIR/duplicate-derive-debug-2.rs:4:17
  |
4 | #[derive(Debug, Debug)]
  |                 ^^^^^

error: previous `#[derive(Debug)]` parameter here
 --> $DIR/duplicate-derive-debug-2.rs:4:10
  |
4 | #[derive(Debug, Debug)]
  |          ^^^^^
